--- a/TP_2_12/TP_2_12.vcxproj
+++ b/TP_2_12/TP_2_12.vcxproj
@@ -143,11 +143,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="note.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="streamswork.cpp" />
+    <ClCompile Include="task1.cpp" />
+    <ClCompile Include="task2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="keeper.h" />
     <ClInclude Include="note.h" />
+    <ClInclude Include="streamswork.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
